--- a/stukbook/Gemfile
+++ b/stukbook/Gemfile
@@ -50,3 +50,4 @@ gem 'twitter-bootstrap-rails', :git => 'git://github.com/seyhunak/twitter-bootst
 gem 'simple_form'
 gem 'devise'
 gem 'gravatarify', '~> 3.0.0'
+gem 'public_activity'
