--- a/stukbook/config/database.yml
+++ b/stukbook/config/database.yml
@@ -21,5 +21,16 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: lykesbook
+  encoding: utf8
+  min_messages: warning
+  pool: 5
+  timeout: 5000
+
+
+
+
+
+
+
